--- a/src/login.css
+++ b/src/login.css
@@ -1,4 +1,4 @@
-.frame{
+.nav{
     position: relative;
     text-align: center;
     justify-content: center;
@@ -11,7 +11,7 @@
     border-radius: 20px;
 }
 
-.title{
+.header{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,7 +20,7 @@
     padding-top: 40px;
 }
 
-.inputField{
+.body{
     display: block;
     width: 100%;
     padding-left: 5px;
@@ -29,7 +29,7 @@
     margin-bottom: 40px;
 }
 
-.special{
+.input-place{
     padding: 23px;
     border-radius: 50px;
     font-size: larger;
@@ -42,7 +42,7 @@
     margin-top: 40px;
 }
 
-.submit{
+.footer{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -50,7 +50,7 @@
     padding-top: 110px;
 }
 
-.submit-1, .submit-2{
+.button-1, .button{
     background-color: green;
     color: white;
     padding: 20px 35px;
@@ -59,13 +59,13 @@
     text-decoration: none;
 }
 
-.submit-1 {
+.button-1 {
     border-style: inset;
     border-color: coral;
     border-width: 7px;
 }
 
-.submit-1:hover{
+.button-1:hover{
     opacity: 0.8;
     cursor: pointer;
 }
