--- a/src/register.css
+++ b/src/register.css
@@ -1,4 +1,4 @@
-.frame{
+.nav{
     position: relative;
     text-align: center;
     justify-content: center;
@@ -9,7 +9,7 @@
     border-radius: 20px;
 }
 
-.title{
+.header{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,7 +18,7 @@
     padding-top: 40px;
 }
 
-.inputField{
+.body{
     display: block;
     width: 100%;
     padding-left: 5px;
@@ -27,7 +27,7 @@
     margin-bottom: 40px;
 }
 
-.special{
+.input-place{
     padding: 23px;
     border-radius: 7px;
     font-size: larger;
@@ -40,14 +40,14 @@
     margin-top: 40px;
 }
 
-.submit1{
+.footer{
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 5px;
 }
 
-.submit-1, .submit-2{
+.button, .button-1{
     background-color: green;
     color: white;
     padding: 20px 35px;
@@ -56,13 +56,13 @@
     text-decoration: none;
 }
 
-.submit-1 {
+.button-1 {
     border-style: inset;
     border-color: coral;
     border-width: 7px;
 }
 
-.submit-1:hover{
+.button-1:hover{
     opacity: 0.8;
     cursor: pointer;
 }
