--- a/src/register.css
+++ b/src/register.css
@@ -40,14 +40,14 @@
     margin-top: 40px;
 }
 
-.footer{
+.footer1{
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 5px;
 }
 
-.button, .button-1{
+.button1, .button{
     background-color: green;
     color: white;
     padding: 20px 35px;
@@ -56,13 +56,13 @@
     text-decoration: none;
 }
 
-.button-1 {
+.button {
     border-style: inset;
     border-color: coral;
     border-width: 7px;
 }
 
-.button-1:hover{
+.button:hover{
     opacity: 0.8;
     cursor: pointer;
 }
